tests/invalid/Record_Invalid_2.whiley

constant Broken is {y: 2, x: 1}

type Global is {Broken field}
